--- a/再读网络小说.md
+++ b/再读网络小说.md
@@ -1,5 +1,11 @@
 ## 再读网络小说
 
-高中时我曾度过一本网络小说，也是迄今为止的唯一一本，尽管那时候网络小说是和谈恋爱一样严重违禁，但我们后排同学抽屉里依然有撕下的散落章节，相互传阅，或MP4或手机，总之，唾手可得。
+高中时我曾读过一本网络小说，也是迄今为止的唯一一本，尽管那时候网络小说是和谈恋爱一样严重违禁，但我们后排同学抽屉里，依然存有大量撕下的散落章节，相互传阅，还有电子阅读：或MP4或手机，总之，网络小说唾手可得。
 
-我新买了个2G的手机存储卡，
+后来，我新买了个2G的手机存储卡，在08或09年那会，属于很大的存储了，成本约50元。
+
+买卡免费提供下载服务，这部小说也就这么机缘巧合的进去了，作者始终在更新，大学时又堵了最新的一部分，直到最近偶然想起，又找到读了一部分。
+
+但已经索然无味，来来回回那么几个片场和情节，但在高中时期，是没有能力看透的，思绪和激素会随着文字跌宕起伏。
+
+而现在，再也没有了那种感觉。
