--- a/《代码整洁之道》.md
+++ b/《代码整洁之道》.md
@@ -1,3 +1,4 @@
+## 第一章 代码整洁概述
 \1. 请用一句话描述这部分的内容；
 
 为赶时间而放弃代码整洁，只会适得其反
@@ -18,3 +19,77 @@
 
 【代码不会被取代，人类造不出更加抽象的系统去自动生成代码】目前在工作中发现这种系统只能抽象一层，比如：活动页生成工具，报表配置平台，psd转html，再如为实现三端统一而抽象的Flutter，感觉两层抽象已经是维持投入产出比的极限？
 
+## 第二章 命名
+本章讲述了：常见命名问题及优化建议汇总
+
+好的命名：
+- 易读
+- 易理解
+- 易维护
+- 变量：名词
+- 函数：动词
+
+坑：改掉命中了自己不足的坏习惯：改掉双关语，如，add，append，insert乱用的情况
+坑：层级文件夹命名后悔了，内部文件再被多个引用，这改起来就很麻烦了
+
+## 第三章 函数
+本章是对函数最优实现的总结
+
+- 一个函数就干一件事情
+- 避免多参函数、不使用侵入性函数
+- 好的函数：短、功能单一、参数少，内部整洁
+- 避免逻辑重复：重复是万恶之源
+- 好函数是后续改出来的
+
+总结：好的函数，只干一件事，参数少
+
+## 第四章 注释
+
+用整洁的代码来免去多余的注释
+
+3个反常识：
+- 注释多说明代码烂
+- 将来可用的代码请放心的删除，不要注释
+- 不要注释自己的名字：N次变更后已经和你没关系了，而别人不会/敢，删除你的大名
+
+作者主张少些注释，用好的命名和逻辑来取代，但作者是英文语境，面对中文，应适当添加注释，但要在更改代码时，也要更改注释
+
+## 第六七章 
+
+得墨忒定律：
+
+- 每个单元对于其他的单元只能拥有有限的知识：只是与当前单元紧密联系的单元；
+- 每个单元只能和它的朋友交谈：不能和陌生单元交谈；
+- 只和自己直接的朋友交谈。
+这个原理的名称来源于希腊神话中的农业女神，孤独的得墨忒耳。
+
+函数不返回null，不传null，能减少很多事件
+
+## 第八十章 好的类
+
+好的类：
+- 短，权责单一：如果无法精确命名，则说明太长
+- 高内聚
+
+## 第十一、十二章 
+【一开始就做对系统】纯属神话，要用迭代的方式打造【对的系统】
+
+设计系统或模块用大概可行的最简单方案，保持系统整洁，依靠后续整洁的迭代推进系统建设
+
+## 第十四章
+
+只能满足让代码工作的程序员不够专业
+
+进度可变、需求可变，但糟糕的代码却一直腐败发酵
+
+清理腐败代码成本高昂，但保持代码整洁却相对容易：写下了糟糕的代码，5分钟内就要立即解决，否则会永远发酵，你永远没有时间改；
+
+## 总结
+
+本书很赞，其核心知识点不多，能做到5个就已经很不错了：
+
+- 发现糟糕的代码立马就改，否则会永远发酵，直到系统不可维护，持续保持代码整洁，永不让腐败有机会发生，勒布朗法则：稍后等于永不。
+- 命名一定要好，能省去大部分注释，把全局的变量、配置 大写抽出来
+- 函数：只干一件事，参数少，不传null，不返回null
+- 代码不要重复，重复是万恶之源
+- 产品经理痴迷进度，但你要以同等的热情护卫代码（医生不会因病人为提速而同意放弃洗手的请求），否则锅都是自己背，直到项目不可维护
