--- a/俞军——产品方法论.md
+++ b/俞军——产品方法论.md
@@ -103,7 +103,18 @@
 
 ## 5年经验后的产品路线
 - 专业路线：专业能力出色，经验丰富的产品始终稀缺，掌握用户模型后，转向交易模型，不再仅仅追求创造用户价值，而是追求创造有利可图的用户价值，让企业既不伤用户也能赚钱，【交易模型】是能让企业既不伤用户也能赚钱的【产品设计】和【商业模式设计】
-- 管理路线（计划、组织、领导、协调、识人用人、分优先级）：但有天赋的产品最终也是管理，那差异何在？天赋越高应该越晚做管理，因为还要锻炼自己的产品决策力：
+- 管理路线（计划、组织、领导、协调、识人用人、分优先级）：但有天赋的产品最终也是管理，那差异何在？天赋越高应该越晚做管理，因为还要锻炼自己的
+- 业务路线（to B，知识和经验的累加）：to C一将功成万骨枯，要么死去要么作用上亿用户，而to B保守且稳定，为大企业做内部工具，或业务支持工具，这个需求永存，企业发展越好，规模越大，需求就越强烈；所以to B是求稳产品的不错选择；
+- 做新产品或创业（高风险、高收益】ABCD轮融资）
+- 出海：中国互联网应用是少有发展阶段全球领先的重大产业，高成熟度、竞争激烈、各种明暗游戏规则导致的该成本，磨练出的经营能力和产品能力相对海外往往有很强的的竞争力；
+
+产品决策力：关键是权衡取舍、分优先级：
+- 没有决策：每天工作10小时，即使加班到15小时，项目产出最多50%
+- 有决策：优先项目B，而非A，那么B项目的产出可能是A的50倍
+
+专业天赋一般的产品经理：把握好识人用人、帮助优秀的人才成长，让下属中优秀的人去做项目决策，这样他们成长最快，你自己轻松，企业收益也最大；
+
+插播小故事：有个管理职请教说他一直在努力提升自己，我说你为什么要做【提升自己】这件艰难的事呢？你已经是高级管理者了，最简单有效的是全力找到优秀的人做下属，找到一个，你就少费心一半，如果找到5个，你就可以天天打高尔夫球；工作绩效也会更好。并不是反对你去提高自己，而是要先做简单的事，后做艰难的事，优先级顺序是不对的；他说很颠覆他的价值观，但听起来好像很有道理；
 
 ## 产品经理要懂技术吗？背后是机会成本和参照系
 最最重要的是要懂用户，会权衡；
@@ -112,4 +123,9 @@
 如果要，需要达到什么程度？
 
 所以要平衡机会成本和其带来的收益，在不同阶段、不同业务有不同的答案，选投入产出比最高的，最关键的；
+
+## 目标和代价：什么是好的产品经理？
+能为企业赚最多的钱，且从长期角度，产品经理与企业交换劳动和报仇，产品经理的服务对象时企业；而非有情怀的，对用户体验特别好的产品；因为体验每个企业虽然都重视，但如果升级会降低企业收入，则很难通过；
+
+一个东西对人的价值有多大，不在于这个人对东西有多大需求、多多赞美和估值，而是他愿意为它付出什么代价；如果企业不愿为体验降低收入，那么用户体验对其一文不值；
 
