--- a/计算机科学/安全攻防/前端代码混淆.md
+++ b/计算机科学/安全攻防/前端代码混淆.md
@@ -85,3 +85,5 @@ set Interval(function(){
 window.outerHeight为窗口总体高度
 window.innerHeight则仅为内容窗口，有差值则说明开启了调试工具
 如果调试窗口为左右布局，可用window.innerWidth检测
+
+> [[计算机安全]]
